# cwe-rust

src-tauri/: .gitignore  Cargo.toml  flake.nix  tauri.conf.json
src-tauri/src/: crypting.rs  main.rs
src-tauri/src/base/: filesystem.rs  mod.rs  prepare.rs  uuid.rs
src-tauri/src/modules/: basic.rs  config.rs  crypting.rs  json.rs  mod.rs  network.rs
ui/: index.html  script.js  style.css
