[package]
name = "cwe-client"
version = "0.1.0"
description = "Desktop client for cwe"
authors = ["random123"]
license = ""
repository = ""
default-run = "cwe-client"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.7.0", features = [] }
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "js"] }
json = "0.12.4"
serde_json = "1.0.120"
serde = "1.0.204"
rand = "0.8.5"
openssl = "0.10.66"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
